@startuml

title __MOVEMENTS' Class Diagram__\n

  namespace com.example.keepmoneyv3 {
    namespace ui.home {
      class com.example.keepmoneyv3.ui.home.HomeFragment {
          + onCreateView()
      }
    }
  }
  

  namespace com.example.keepmoneyv3 {
    namespace ui.home {
      class com.example.keepmoneyv3.ui.movements.HomeViewModel {
          - mText : MutableLiveData<String>
          + HomeViewModel()
          + getText()
      }
    }
  }
  

  com.example.keepmoneyv3.ui.home.HomeFragment -up-|> androidx.fragment.app.Fragment
  com.example.keepmoneyv3.ui.home.HomeFragment o-- com.example.keepmoneyv3.ui.home.HomeViewModel : homeViewModel
  com.example.keepmoneyv3.ui.home.HomeViewModel -up-|> androidx.lifecycle.ViewModel


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
